fixed the website spacing and some style

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -68,7 +68,7 @@ body {
       background-color: #9bd0ff;
   }
   .tabcontent{
-    padding-left: 20px;
+    padding-left: 10px;
   }
   .tabOrder{
     justify-content: center;
